--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "dependencies": {
     "parcel-bundler": "^1.12.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "pug": "^2.0.4",
+    "sass": "^1.25.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel src/pages/UI-kit/ColorsType/colorsType.pug --open",
+    "build": "parcel build src/pages/UI-kit/ColorsType/colorsType.pug -d docs --public-url ./"
   },
   "repository": {
     "type": "git",
