--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/pages/ui-kit/colors-type/colors-type.pug --open",
-    "build": "parcel build src/pages/ui-kit/colors-type/colors-type.pug -d docs/colors-type --public-url ./"
+    "build": "parcel build src/pages/ui-kit/colors-type/colors-type.pug -d output/colors-type --public-url ./"
   },
   "repository": {
     "type": "git",
