--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "parcel-bundler": "^1.12.4"
   },
   "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "ion-rangeslider": "^2.3.1",
     "postcss-modules": "^1.5.0",
     "pug": "^2.0.4",
@@ -18,7 +21,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/pages/ui-kit/cards/cards.pug --open",
+    "start": "parcel src/pages/ui-kit/form-elements/form-elements.pug --open",
     "build": "parcel build src/pages/ui-kit/colors-type/colors-type.pug -d output/colors-type --public-url ./"
   },
   "repository": {
