--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,8 @@
     "import/extensions": "off",
     "no-new": "off",
     "class-methods-use-this": "off"
+  },
+  "globals": {
+    "$": "readonly"
   }
 }
