--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Hotel TOXIN",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode delelopment --open",
+    "dev": "webpack --mode development",
+    "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -18,11 +19,19 @@
   },
   "homepage": "https://github.com/FanManutd/The-2nd-task-by-Misha-Yakubchuk#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "webpack": "^4.44.2",
@@ -30,6 +39,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "jquery": "^3.5.1"
+    "air-datepicker": "^2.2.3",
+    "ion-rangeslider": "^2.3.1",
+    "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1"
   }
 }
