--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Hotel TOXIN",
   "main": "index.js",
+  "browserslist": "> 0.25%, not dead",
   "scripts": {
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open",
@@ -19,19 +20,24 @@
   },
   "homepage": "https://github.com/FanManutd/The-2nd-task-by-Misha-Yakubchuk#readme",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "cssnano": "^4.1.10",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
-    "pug": "^2.0.4",
+    "postcss": "^8.1.1",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^4.0.4",
+    "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
+    "resolve-url-loader": "^3.1.1",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "webpack": "^4.44.2",
@@ -39,6 +45,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/core": "^7.11.6",
     "air-datepicker": "^2.2.3",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
